--- a/css/styles.css
+++ b/css/styles.css
@@ -15,4 +15,34 @@ h2 {
   margin-bottom: 10px;
 }
 
+.genero {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+}
 
+.card {
+  padding: 10px;
+  background-color: #ffff;
+  border: solid 1px #cccccc;
+  border-radius: 5px;
+  box-shadow: 2px 2px 6px 0px rgba(0,0,0,0.75);
+  transition: all .2s ease-in-out;
+}
+
+.card:hover {
+  transform: scale(1.1);
+}
+
+img {
+  width: 100%;
+  max-width: 200px;
+  box-shadow: 2px 2px 6px 0px rgba(0,0,0,0.75);
+}
+
+
+
+p {
+  font-weight: bold;
+  max-width: 200px;;
+}
